...

class TextFieldView: UIStackView, UITextFieldDelegate {
    
    typealias AI = AccessibilityIdentifiers
    
    let fieldName = UILabel()
    let fieldText = UITextField()
    let fieldError = UILabel()
    
    var fieldErrorText: String?
    var displayingError = false
    
    init(frame: CGRect,
         _ axis: NSLayoutConstraint.Axis,
...
