...
        activityCount.accessibilityIdentifier = AI.PROGRESS_CELL_ACTIVITY_COUNT
        activityCount.font = UIFont.boldSystemFont(ofSize: 20)
        activityCount.numberOfLines = 0
        activityCount.textAlignment = .center
        
        recordActivity.accessibilityIdentifier = AI.PROGRESS_CELL_RECORD_ACTIVITY
        format(button: recordActivity, text: "Add")
        recordActivity.addTarget(self, action: #selector(recordActivityButtonPressed), for: .touchUpInside)
        
        subtractActivity.accessibilityIdentifier = AI.PROGRESS_CELL_SUBTRACT_ACTIVITY
        format(button: subtractActivity, text: "Subtract")
        subtractActivity.addTarget(self, action: #selector(subtractActivityButtonPressed), for: .touchUpInside)
        
...
